--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>be.ibiiztera</groupId>
     <artifactId>emptycanvas</artifactId>
-    <version>33--2015-03-05</version>
+    <version>33</version>
     <packaging>jar</packaging>
     <name>emptycanvas</name>
     <description>3D rendering engine. Plus modelling.</description>
