--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>emptycanvas</artifactId>
     <version>34</version>
     <packaging>jar</packaging>
-    <name>Empty Canvas Empty Sheet</name>
+    <name>Empty3</name>
     <description>3D rendering engine. Plus modelling.</description>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
