--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,16 @@
             <artifactId>jep</artifactId>
             <version>2.24</version>
         </dependency>
+        <dependency>
+            <groupId>ca.umontreal.iro</groupId>
+            <artifactId>ssj</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-ai</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
     
 </project>
