--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <!-- please build montemedia first -->
     <groupId>info.emptycanvas</groupId>
     <artifactId>empty3</artifactId>
     <version>35</version>
