--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <!-- please build montemedia first -->
     <groupId>info.emptycanvas</groupId>
     <artifactId>empty3</artifactId>
-    <version>38</version>
+    <version>39a</version>
     <packaging>jar</packaging>
     <name>Empty3</name>
     <description>3D rendering engine. Plus modelling.</description>
